tests/baselines/reference/asyncGenerators.classMethod.21.es6.errors.txt
tests/cases/conformance/asyncGenerators/es6/classMethods/asyncGenerators.classMethod.21.es6.ts(2,14): error TS1213: Identifier expected. 'yield' is a reserved word in strict mode. Class definitions are automatically in strict mode.
tests/cases/conformance/asyncGenerators/es6/classMethods/asyncGenerators.classMethod.21.es6.ts(2,14): error TS2304: Cannot find name 'yield'.


==== tests/cases/conformance/asyncGenerators/es6/classMethods/asyncGenerators.classMethod.21.es6.ts (2 errors) ====
    class C {
        async * [yield]() {
                 ~~~~~
!!! error TS1213: Identifier expected. 'yield' is a reserved word in strict mode. Class definitions are automatically in strict mode.
                 ~~~~~
!!! error TS2304: Cannot find name 'yield'.
        }
    }